force-app/main/default/objects/Postcode_Range__c/Postcode_Range__c.object-meta.xml
<CustomObject>
    <label>Postcodegebied</label>
    <nameField>
        <label>Naam van Postcodegebied</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Postcodegebieden</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>