force-app/main/default/objects/Postcode_Range__c/fields/Gebieden__c.field-meta.xml
<CustomField>
    <fullName>Gebieden__c</fullName>
    <label>Gebieden</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vloerkleed</fullName>
            </value>
            <value>
                <fullName>SR Particulier</fullName>
            </value>
            <value>
                <fullName>SofaSaver</fullName>
            </value>
            <value>
                <fullName>De Meubelreiniger</fullName>
            </value>
            <value>
                <fullName>Mr. Kools</fullName>
            </value>
            <value>
                <fullName>Bright &amp; Clean</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>