force-app/main/default/objects/Postcode_Range__c/fields/Postcode_Begin__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Begin__c</fullName>
    <label>Postcode Begin</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>