force-app/main/default/objects/Postcode_Range__c/fields/Postcode_Einde__c.field-meta.xml
<CustomField>
    <fullName>Postcode_Einde__c</fullName>
    <label>Postcode Einde</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>