force-app/main/default/objects/Postcode_Range__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Postcode_Begin__c</columns>
    <columns>Postcode_Einde__c</columns>
    <filterScope>Everything</filterScope>
    <label>Alle</label>
</ListView>