force-app/main/default/objects/Postcode_Range__c/listViews/Dienstgebied_Vloerkleed.listView-meta.xml
<ListView>
    <fullName>Dienstgebied_Vloerkleed</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>Dienstgebied Vloerkleed</label>
</ListView>